bin_PROGRAMS=    incline
incline_SOURCES= incline_dbms.cc incline_mysql.cc incline_pgsql.cc incline_def.cc incline_def_async.cc incline_def_async_qtable.cc incline_def_sharded.cc incline_mgr.cc incline_driver.cc incline_driver_standalone.cc incline_driver_async.cc incline_driver_async_qtable.cc incline_driver_sharded.cc incline_util.cc incline.cc
